Fixed spacing, added animations for user interaction with arrow.

--- a/css/override.css
+++ b/css/override.css
@@ -46,7 +46,7 @@ nav li{display: inline-block;margin-right: 5px;line-height: 35px;}
 	-o-background-size: cover;
 	background-size: cover;
 	width: 100%;
-	height: 737px;
+	height: 100%;
 }
 #home button{
 	width: 300px;
@@ -296,12 +296,35 @@ nav li{display: inline-block;margin-right: 5px;line-height: 35px;}
 	border-style: solid;
 	border-width: 1px;
 }
+#continue-arrow{
+	-webkit-animation: pulsate 3s ease-in-out 0s infinite alternate;
+	-moz-animation: pulsate 3s ease-in-out 0s infinite alternate;
+	animation: pulsate 3s ease-in-out 0s infinite alternate;
+}
 #home-scroll{
 	display: block;
 	width: 60px;
 	height: 60px;
 	float: left;
 	margin: 680px 0 0 460px;
+	-webkit-animation: pulsate 3s ease-in-out 0s infinite alternate;
+	-moz-animation: pulsate 3s ease-in-out 0s infinite alternate;
+	animation: pulsate 3s ease-in-out 0s infinite alternate;
+}
+@-webkit-keyframes pulsate {
+    0%{opacity: 1;}
+    50%{opacity: 0.3;}
+    100%{opacity: 1;}
+}
+@-moz-keyframes pulsate {
+    0%{opacity: 1;}
+    50%{opacity: 0.3;}
+    100%{opacity: 1;}
+}
+@keyframes pulsate {
+    0%{opacity: 1;}
+    50%{opacity: 0.3;}
+    100%{opacity: 1;}
 }
 #home-scroll .icon-angle-down{
 	color: #fff;
@@ -341,14 +364,23 @@ footer{
 footer ul#footer-wrapper{margin: 15px auto;padding:0;width:850px;}
 footer ul#footer-wrapper li{display: inline-block;width: 160px;text-align: center;}
 
-/* Media */
+/* ----------------------------- Scrolls Bars ---------------------------------------*/
+
+/* ----------------------------- Media Queries ---------------------------------------*/
 @media only screen and (max-width: 980px){
+	#home{
+		width: 100%;
+		height: 100%;
+	}
 	#map{
 		width: 960px;
 		margin: 0 auto;
 	}
 	#map_canvas{
 		width: 960px;
+	}
+	#about-us .medium .right-content{
+		padding-left: 5px;
 	}
 	#ways{
 		width: 978px;
